2008-02-12  Laban Mwangi <labeneator@gmail.com>

	* INSTALL_README: Added dependent libraries (bug
	fix for aid #591)

2008-02-12  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/*: Minor fixes, now includes scripts to
	allow dependents to build. Also fixed minor typo in
	packaging/debian/copyright.

2008-02-05  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/*: Minor changes, now builds lintian clean.
	* packaging/debian/copyright: More information in the copyright,
	including a detailed account of holders.

2007-11-07  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/control, packaging/debian/copyright: Minor
	changes to fix Homepage and Copyright directives.

2007-10-31  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* MANIFEST: Updated.

2007-10-31  Tim Brown <timb@nth-dimension.org.uk>

	* packaging, packaging/debian: New directories.

	* packaging/debian/control, packaging/debian/libopenvas.dirs,
	packaging/debian/compat, packaging/debian/libopenvas-dev.install,
	packaging/debian/changelog, packaging/debian/libopenvas.install,
	packaging/debian/copyright, packaging/debian/rules,
	packaging/debian/libopenvas-dev.dirs: New. The debian packaging files.

2007-10-12  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* VERSION: post-release version bump to 1.0.1.SVN

2007-10-12  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* MANIFEST: Updated.

2007-10-12  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Doing the release 1.0.0.

	* VERSION: Set to 1.0.0.

	* CHANGES: Updated.

2007-10-11  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* README.HPUX: Removed. This information seem to be a leftover
	from stoneage time.

	* TODO: More things noted.

2007-10-08  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Some code cleanups.

	* libopenvas/plugutils(plug_get_fresh_key): Fixed wrong number of
	arguments for fprintf call.

	* libopenvas/harglists.c(harg_addt, harg_set_valuet, harg_renamet): Add